# ChangeLog for dev-util/android-sdk-update-manager
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/android-sdk-update-manager/ChangeLog,v 1.52 2013/06/13 14:57:47 rich0 Exp $

  13 Jun 2013; Richard Freeman <rich0@gentoo.org>
  android-sdk-update-manager-22.0.1-r1.ebuild:
  Permissions fix, 473198 - thanks to Nikita Kozlov for patch.

  11 Jun 2013; Richard Freeman <rich0@gentoo.org>
  android-sdk-update-manager-22.0.1-r1.ebuild:
  Fix SWT version-detection logic to ignore 4.2.

  10 Jun 2013; Richard Freeman <rich0@gentoo.org>
  android-sdk-update-manager-22.0.1-r1.ebuild:
  Fix issue with rebuild loop.

*android-sdk-update-manager-22.0.1-r1 (10 Jun 2013)

  10 Jun 2013; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-22.0.1-r1.ebuild:
  Fix SWT dep - 470840.

*android-sdk-update-manager-22.0.1 (01 Jun 2013)

  01 Jun 2013; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-22.0.1.ebuild:
  Bump - 471944

  29 May 2013; Richard Freeman <rich0@gentoo.org>
  android-sdk-update-manager-22.ebuild:
  Additional permissions fix - 471654

*android-sdk-update-manager-22 (20 May 2013)

  20 May 2013; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-22.ebuild:
  Bump, permissions fix - 470668,463446.

*android-sdk-update-manager-21.1 (03 Mar 2013)

  03 Mar 2013; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-21.1.ebuild:
  bump - 460076

  20 Jan 2013; Richard Freeman <rich0@gentoo.org>
  -android-sdk-update-manager-17.ebuild, -android-sdk-update-manager-20.ebuild,
  -android-sdk-update-manager-20.0.3.ebuild:
  remove outdated versions

  20 Jan 2013; Richard Freeman <rich0@gentoo.org>
  android-sdk-update-manager-21.ebuild:
  add QA_PREBUILT

*android-sdk-update-manager-21 (14 Nov 2012)

  14 Nov 2012; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-21.ebuild:
  bump and fix 442722
