@@ -5,17 +5,19 @@ DIST android-sdk_r21-linux.tgz 91378351 SHA256 ad3e642626407b78d0fafe7ff89d1ee38
 DIST android-sdk_r21.1-linux.tgz 91617112 SHA256 276e3c13a10f37927d4e04d036a94a0cbbf62326981f0ba61a303b76567e3379 SHA512 160cd51f965a23120cf63abe02b9a9ce8913d1239a848bc423b33ad10eff65b30147c6b11ab751aa12154292ce0a7837aa60def1cd31a2ccb5d4fc6fcb6d2c24 WHIRLPOOL a4f413356ac87d4753f8d33bddad737cadf41b2d8246f8971addbec568261212505bef4be3c098c8e21e148960a90b87c2c6952665d1845e0aeee9a307c06b44
 DIST android-sdk_r22-linux.tgz 99643077 SHA256 fd75de430bd83f90fbeb0d15ae017cccf998a87286188232cfeab27a6d89bd32 SHA512 9beda1ae872dde3ca7884d1c389566ce2c8b511ef74d95bc9ddf53683445cc454f9a5a1871a80d5826083d98713040cb1b8b239a77a8eadf56daf30440c7108d WHIRLPOOL e5c39b61d8f9f3f72420af21d7329f04492787543e4693c4eee010b9ec4d48c04bd4eb8d1d202c32552e46e220b2e3e973fe5248602b5d147f0788f89ed23e88
 DIST android-sdk_r22.0.1-linux.tgz 105617062 SHA256 216ae659a53682b97a0e0c2b3dc2c7c3d35011ed10302ae1a5ddbaf52a62459c SHA512 7c97ba8daf4a1b8b6e422d8fca21a5e23f3a5e92d769e13ab5e649a967f2662c71ae201a6c1d40202bda98c4fb80eaa60a3ff5e4af9f613cfab1366f63774ac7 WHIRLPOOL e029de8eaa746796fda38d7716880275d19da5dba08dd514970f7b5b8382a9aaac5415c66529d40f036f717e66f4a7842ebadc3ec323a284a583f0648eac54e0
+DIST android-sdk_r22.0.4-linux.tgz 105640988 SHA256 3eec3c2accfb90d8344d29ed7e80fdf59ea0eecfed3535a7c78116ace5b522e7 SHA512 10e047f6b5384d6c2d3f87e883203f2ab384ac826def16c07f1969d59dc79f97ccba36f0185d564fe0dd4811425fe18767c326b3712ee47b5515f0aba47ed612 WHIRLPOOL 76f21a8d44a7e9c79b8b9c8aea7b46de152577f7526f2d6861eb0c5cabbea20979721d22b2bee9978945ed920898754817f47fafc858a1d90199244b4152274f
 EBUILD android-sdk-update-manager-21.1.ebuild 3177 SHA256 d5a3252cdbac1f2f0a0808db97884bc321be50c2ddfc893b35ca895af45476dc SHA512 b5917569cb0a85360e03a320faf9156268d3534316e96940be74d7b8c670ecb94bf69c856b0071a7019e0e07be478d0299d738831ef831e1c2af1e384cd05a50 WHIRLPOOL 8da377fa2ccef98ebb97cd00edcf5b20066a46048f53e0469bc3ca92105c6b85e360a25abfc3776e7503498524522844fc505b285de56945ae6076e390abfb55
 EBUILD android-sdk-update-manager-21.ebuild 3175 SHA256 38d8c5f8b0aff7e5cb40d42980f81c2a5cbb1cb65ba8e2c185a89ddd46d48c59 SHA512 c0278c9a478af2a83b64b7cd328dd82e51863c6578b51ceaddace5b41471fb05eb6143fb0bf6b8c7f37d2909bb9c4230ed60440b4fd0daf67f6aed02350730fc WHIRLPOOL 7893ba373de5989cc2af4dd043ca37e8a4325d1b0c19871873da377459eed41650de6b6758004d78f002ab9a01b61a34e9f9f2058d4696c8da760681be676cfb
 EBUILD android-sdk-update-manager-22.0.1-r1.ebuild 3400 SHA256 823c11578914e57d6e353c3290c49ae7850e43474dcb9482d723b9baa1ccca8b SHA512 9b045b4698e2e76828aca163bcec3449c017f82b4ab479daa93b7331445ccd25dd63af7cd8f06509c479ea2951d85b8be92b66742699b173983569d40d9e4853 WHIRLPOOL 37f07e6a77101c515f5a6dafac433538f700e8499c9839390ed2f65efec87d05dbcaefe650943b1cf41a844597b7b02296453358305e7eb19626d06255078f36
 EBUILD android-sdk-update-manager-22.0.1.ebuild 3369 SHA256 ddb963dbb8d8809ded4cf368b19663774e461ec7f0da54ffec66917c3ef1a66e SHA512 7366b2ebf260bab4b40ad7fcd77d1cd467f8091e3380ec1583a55f4fb8006832c3901f57c3ce06eb0187878147346a44b5a67b9daccac71a60881ad21651d1b8 WHIRLPOOL 20513a283c9acc87949579aab3129bfbeee43c0560e50eb6624c017c38682e490683383ac0b74812bd1a504e8824c8f1c710be897c021738a10bf07bf3a88ab8
+EBUILD android-sdk-update-manager-22.0.4.ebuild 3397 SHA256 da69440b6735eca4f30957e90500a00b0c5c73db70932a59b45885dedac79dff SHA512 ccfb34191e91446d8ae4511ae0d8d206ed5837644855f7265b1c52af158ab94e2a333533bcad1425dfcb9fad20e949f73faae7e0fe44df117305accab9333187 WHIRLPOOL 95224b04057f7232a8b57ad059e945313527e3ebf9b8fa78e143ea5c06609de656c23ab103c6fb7f5a5810d390af81ce25343d444dcf4540df8ef2fbe1e2a830
 EBUILD android-sdk-update-manager-22.ebuild 3365 SHA256 f86aaae14f90bbdecc7959ce02e60a87f4fcae0279a6ca491681e184bf6c3bf4 SHA512 b5c93a752f955b7a83b6458f3b49b8dc84d62a6a78c4bdc72348be0f8b09882b54a2781735ecdbbf98f0196762fdef2c7de114c13666b07c116306f80c387d44 WHIRLPOOL a1d0231a5b8ff0fee7b60fb28d59c3339f1e50955863658c7c65214da1123601f42fed21c2564438afe1c96e00215cc9d228ef738b036a87da2bca2b4557f659
-MISC ChangeLog 9391 SHA256 71a59cce9d88e3b83847db5960b3483c8e8211bcd35864d14de8432578583b42 SHA512 d46789afd0eb68d578f8097878f2d0cab74bb06065a92529c39ec5ef8b4cf7cf5b49cfbae0c32914e565ee5d912ccdcbca25344017f53f4bfea60c2fe8a3c649 WHIRLPOOL 82e0b1a36051f7c80e2889857c01f78bc2c4da0b58ef5dc0111a61ed46fe7c990090e3a07e4b9e0370447aabc5aed31f43334136feeabc64a08afd502b6c6052
+MISC ChangeLog 9554 SHA256 adbdb6fc25a6436e90aa8c8d8bf44adcf0709b04dc33cb46a0cb7959b79ccd5d SHA512 985b00951eb96f1dd55baba229ecdeb2e22ecb0a3b87b994b98726b93af4db55c11c5123f732471350fbb31183fd99e88a9fef89fa38b10e1fe9113ad6646bd0 WHIRLPOOL fe0ff96ac2b48d02b4eaa69ecf4645866e5540a69a3cd3ea5502f84768723f097b2c50863cee2966825e6a6587612ca9b5bbfc500c6d00931ba370c9df80a9b2
 MISC metadata.xml 200 SHA256 98e80d4c2848c87ef9f4b295ac60b27acca3a53380008166b7016a02d4e9526b SHA512 03a8813863af4f9620e6e5564604482e9664ffd576ff24f6ab667484d826482907ece3849b08af3db904d4de9397a8712ed2462773c42c66c59c645192fc9c48 WHIRLPOOL dab7569da9c0b95379db908ed69102239f42e80cab6c6106ac401eb5ef314a1e7056fe3e2a451c2a80dd878df328cdb3f385bfcf4254070e3a9eff6519f8fb81
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlG53fkACgkQCMFw3lXsEjrXuwD+PQxyF7swOjR6iIVw2MGIdtb7
-BXUhKYhwJNFyEUXE7ngA/1BOedPaTGXMkwvd3hdppV0aLCSFilI8GoED9kc/+QhS
-=piO0
+iF4EAREIAAYFAlHvLJ0ACgkQCMFw3lXsEjoHQgD9GF0hOx1UNAzH3ByUBi0PrUq2
+TFKFyv57xcvslEu3dLUA/3AsM6fqUqOb6hqLKgflqcMehnIDzI4JdfRSNmbbR0EY
+=eYEZ
 -----END PGP SIGNATURE-----
