@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/android-sdk-update-manager
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/android-sdk-update-manager/ChangeLog,v 1.52 2013/06/13 14:57:47 rich0 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/android-sdk-update-manager/ChangeLog,v 1.53 2013/07/24 01:23:39 rich0 Exp $
+
+*android-sdk-update-manager-22.0.4 (24 Jul 2013)
+
+  24 Jul 2013; Richard Freeman <rich0@gentoo.org>
+  +android-sdk-update-manager-22.0.4.ebuild:
+  Bump - 477946.
 
   13 Jun 2013; Richard Freeman <rich0@gentoo.org>
   android-sdk-update-manager-22.0.1-r1.ebuild:
